--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,22 @@
+buildscript {
+    repositories {
+        google()  // <-- This line is required to resolve Google's services
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.2'  // Google Services plugin
+    }
+}
+
+
+
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
-
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
