--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,4 @@ dependencies {
   // Add the dependencies for any other desired Firebase products
   // https://firebase.google.com/docs/android/setup#available-libraries
 }
+apply plugin: 'com.google.gms.google-services'  // Add this at the bottom
