--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.9.0
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.5.0 
 
 dev_dependencies:
   flutter_test:
